--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
     "element-plus": "^2.3.14",
     "node-sass": "^9.0.0",
     "sass": "^1.69.1",
